# foundry.github.io

./: CNAME  README.md  index.html
case-studies/: Script_to_run_case_studies_A_and_B.md
case-studies/host-programs/: .gitattributes
experiment/Artifacts_to_transplant/Scenario_II/HOST_TO-TRANSPLANT/NEATVI_1.0/: CMakeLists.txt  Makefile  run_neatvi.sh
experiment/Data_analisys/: Experiment_results.xlsx
paper/FOUNDRY-TOSEM_JOURNAL/: abbreviations.tex  biblio.bib  main.tex
prodScalpel/: autoScalpel_spl  prodScalpel
prodScalpel/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
prodScalpel/src/: (null)temp_individual_for_instantiation.out  (null)temp_mappings_for_candidate_instantiation.out  .gitignore  Add_TXL_files_for_Linux_from_TXL_LINUX_folder.patch  CallGraph.c  CallGraph.h  DeclarationSymbolTable.c  DeclarationSymbolTable.h  DeclarationWithHeaderDefinition.c  DeclarationWthHeaderDefinition.h  DependencyList.c  DependencyList.h  DependencyListWithID.c  DependencyListWithID.h  FeatureInterface.c  FeatureInterface.h  FunctionCallDependency.c  FunctionCallDependency.h  FunctionElement.c  FunctionElement.h  FunctionExtractor.c  FunctionExtractor.h  GIReduction.c  GIReduction.h  GP.c  GP.h  GPIndividual.c  GPIndividual.h  GenTrans.h  GlobalDeclarations.c  GlobalDeclarations.h  GlobalDendendenceGraph.c  GlobalDependenceGraph.h  (+62 more)
response/: R1.txt  R2.txt  README.md  original_review_email.txt  rebuttal.tex  ~$ail_requiring_extension.docx
(+1699 files in other folders)
